--- a/AltenTest/pom.xml
+++ b/AltenTest/pom.xml
@@ -3,6 +3,7 @@
   <groupId>AltenTest</groupId>
   <artifactId>AltenTest</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <packaging>jar</packaging>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
